samples/_failures_safe/1761538034_b3f211_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c822580f.c: In function ‘main’:
./samples/SAFE/__tmp_c822580f.c:138:24: error: expected ‘)’ at end of input
  138 |         else if (strcmp
      |                 ~      ^
      |                        )
./samples/SAFE/__tmp_c822580f.c:138:9: error: expected declaration or statement at end of input
  138 |         else if (strcmp
      |         ^~~~
./samples/SAFE/__tmp_c822580f.c:138:9: error: expected declaration or statement at end of input
